--- a/style.css
+++ b/style.css
@@ -41,7 +41,37 @@ h1{
 .dream-img img{
     max-width: 80%;
 }
+.flexiable-container{
+    display: flex;
+}
+.experience-web {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 0px 0px 30px #000;
+    border-radius: 5px;
+    padding: 30px 25px;
+}
 
+.Experiences-area{
+    margin-bottom: 100px;
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-web-border{
+    border-left: 7px solid;
+    border-image: linear-gradient(orange,tomato);
+    border-image-slice: 1;
+}
+.experience-baby-border{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,black);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+}
 
 
 
